Opened 10 years ago
Closed 10 years ago
#4707 closed bug (fixed)
BTextView::OffsetAt(int32 offset) crashes when offset is <0
Reported by: | jan_64 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
BTextView::OffsetAt(int32 offset) crashes when offset is negative. (It doesn't crash on BeOS R5.)
To fix this bug, just add: if(offset<0) offset = 0;
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev33439. Thanks for reporting!